// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton as 1`] = `
.c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<a
  className="c0"
  href="#"
>
  <svg
    className="c1"
    viewBox="0 0 2048 2048"
  >
    <path
      d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
    />
  </svg>
</a>
`;

exports[`IconButton basic 1`] = `
.c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
  className="c0"
>
  <svg
    className="c1"
    viewBox="0 0 2048 2048"
  >
    <path
      d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
    />
  </svg>
</button>
`;

exports[`IconButton disabled 1`] = `
.c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
  className="c0"
  disabled={true}
>
  <svg
    className="c1"
    viewBox="0 0 2048 2048"
  >
    <path
      d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
    />
  </svg>
</button>
`;

exports[`IconButton size 1`] = `
Array [
  .c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 8px;
  font-size: 0.8em;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
    className="c0"
    size="small"
  >
    <svg
      className="c1"
      viewBox="0 0 2048 2048"
    >
      <path
        d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
      />
    </svg>
  </button>,
  .c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
    className="c0"
    size="medium"
  >
    <svg
      className="c1"
      viewBox="0 0 2048 2048"
    >
      <path
        d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
      />
    </svg>
  </button>,
  .c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 16px;
  font-size: 1.2em;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
    className="c0"
    size="large"
  >
    <svg
      className="c1"
      viewBox="0 0 2048 2048"
    >
      <path
        d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
      />
    </svg>
  </button>,
]
`;

exports[`IconButton variant 1`] = `
Array [
  .c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #0078d4;
  background-color: transparent;
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: rgba(36,149,224,0.08);
}

.c0:active {
  background-color: rgba(36,149,224,0.36);
}

<button
    className="c0"
  >
    <svg
      className="c1"
      viewBox="0 0 2048 2048"
    >
      <path
        d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
      />
    </svg>
  </button>,
  .c1 {
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: inherit;
  color: inherit;
  fill: currentColor;
}

.c0 {
  border: none;
  outline: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  border-radius: 50%;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: background-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,border-color 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,box-shadow 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms,padding 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #ffffff;
  background-color: #0078d4;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.22),0px 3px 8px 0px rgba(0,0,0,0.16),0px 1px 14px 0px rgba(0,0,0,0.1);
  padding: 12px;
}

.c0:disabled {
  color: #595959;
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover,
.c0:focus {
  background-color: #005cad;
}

.c0:active {
  color: #ffffff;
  background-color: #002d61;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.22),0px 7px 11px 1px rgba(0,0,0,0.16),0px 3px 17px 2px rgba(0,0,0,0.1);
}

<button
    className="c0"
  >
    <svg
      className="c1"
      viewBox="0 0 2048 2048"
    >
      <path
        d="M640 1755L19 1133l90-90 531 530L1939 275l90 90L640 1755z"
      />
    </svg>
  </button>,
]
`;
